# Humanity

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HEARTBEAT.md  INTRODUCTION.md  Justfile  OPERATING_CONTRACT.md  PUBLIC_DOMAIN.md  README.md  SECURITY_AUDIT.md  SELF-HOSTING.md  TOOLS.md  build.rs  calendar.html  dashboard.html  equipment.html  gitleaks-report.json  home.html  index.html  inventory.html  knowledge.html  learn.html  local-heron-admin.json  logbook.html  maps.html  market.html  notes.html  ops.html  package-lock.json  profile.html  quests.html  settings.html  skills.html  streams.html  studio.html  (+4 more)
app/: Cargo.toml  README.md  tauri.conf.json
app/capabilities/: default.json
app/src/: main.rs  storage.rs
app/web/: admin.html  agents.html  ai-usage.html  calculator.html  calendar.html  crafting.html  dashboard.html  data.html  donate.html  download.html  files.html  governance.html  guilds.html  home.html  identity.html  index.html  inventory.html  manifest.json  maps.html  market.html  notes.html  ops.html  profile.html  projects.html  recovery.html  roadmap.html  settings.html  tasks.html  tools.html  trade.html  wallet-guide.html  wallet.html  web.html
app/web/activities/: core.js  download.html  game.html  gardening.html  map.js  streams.js
app/web/chat/: app.js  base.css  chat-groups-p2p.js  chat-messages.js  chat-onboarding.js  chat-p2p.js  chat-profile.js  chat-social.js  chat-ui.js  chat-voice-calls.js  chat-voice-rooms.js  chat-voice.js  index.html  inputs.css  layout.css  messages.css  modals.css  pq.js  sidebar.css  voice.css
app/web/pages/: bugs-app.js  donate-app.js  files-app.js  market-app.js  notes-app.js  resources-app.js  roadmap-app.js  settings-app.js  tasks-app.js  trade-app.js  wallet-app.js  wallet-guide-app.js
app/web/shared/: accessibility.js  canonical-cbor.js  defaults.js  events.js  glossary.js  i18n.js  icons.js  manifest.json  onboarding-tour.js  shell.js  sw.js  theme.css  wallet.js
crates/core-lifeform-model/: Cargo.toml  README.md
crates/core-lifeform-model/examples/: human_livestock_crop_stress.rs
crates/core-offline-loop/: Cargo.toml  README.md
crates/core-offline-loop/src/: lib.rs
crates/core-skill-progression/: Cargo.toml  README.md
crates/core-skill-progression/src/: lib.rs
crates/core-snapshot-sync/: Cargo.toml  README.md
crates/core-snapshot-sync/src/: lib.rs
crates/core-teaching-graph/: Cargo.toml  README.md
crates/core-teaching-graph/src/: lib.rs
crates/engine-wgpu-shell/: Cargo.toml  README.md
crates/engine-wgpu-shell/src/: main.rs
crates/humanity-core/: Cargo.toml
crates/humanity-core/src/: error.rs  hash.rs  identity.rs  lib.rs  object.rs  signing.rs
crates/humanity-relay/: Cargo.toml
crates/humanity-relay/client/: app.js  bip39-english.js  chat-dms.js  chat-messages.js  chat-onboarding.js  chat-p2p.js  chat-profile.js  chat-social.js  chat-ui.js  chat-voice-streaming.js  chat-voice-webrtc.js  chat-voice.js  crypto.js  index.html  inputs.css  layout.css  messages.css  modals.css  sidebar.css  style.css  voice.css
crates/humanity-relay/src/: api.rs  main.rs  relay.rs  storage.rs
crates/humanity-relay/src/handlers/: mod.rs  msg_handlers.rs  utils.rs
crates/humanity-relay/src/storage/: assets.rs  board.rs  channels.rs  dms.rs  key_rotation.rs  marketplace.rs  messages.rs  misc.rs  mod.rs  pins.rs  profile.rs  push.rs  reactions.rs  skill_dna.rs  social.rs  streams.rs  system.rs  uploads.rs  vault_sync.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
engine/: Cargo.toml
engine/crates/core-offline-loop/src/: lib.rs
engine/crates/humanity-cli-game/: README.md
engine/crates/module-crop-systems/: Cargo.toml
engine/crates/module-health-first-aid/: Cargo.toml
engine/crates/persistence-sqlite/: Cargo.toml  README.md
engine/src/: lib.rs  wasm_entry.rs
engine/src/assets/: loader.rs  mod.rs  watcher.rs
engine/src/ecs/: components.rs
engine/src/gui/: theme.rs
engine/src/gui/pages/: chat.rs  hud.rs  (+4 more)
engine/src/hot_reload/: data_store.rs  mod.rs
engine/src/input/: mod.rs
engine/src/physics/: fluid.rs  mod.rs
engine/src/renderer/: camera.rs  mesh.rs  mod.rs  shader_loader.rs
engine/src/systems/: mod.rs  player.rs
engine/src/terrain/: mod.rs
engine/web/: index.html
native/: Cargo.game.toml  Cargo.toml  build.rs  config.json
native/crates/core-lifeform-model/: README.md
native/crates/engine-wgpu-shell/: README.md
native/crates/module-carpentry/: README.md
native/crates/module-electrical-basics/: README.md
native/data/: calendar.toml  cities.json  config.toml  game.csv  glossary.json  milky-way.json
native/data/asteroids/: types.csv
native/data/blueprints/: basic.ron  objects.ron
native/data/chemistry/: compounds.csv  elements.csv  gases.csv  toxins.csv
native/data/gui/: theme.ron
native/data/i18n/: en.json  es.json  ja.json
native/data/language/: parts_of_speech.json
native/data/planets/: earth.ron  mars.ron
native/data/quests/: construction.ron  tutorial.ron
native/data/resources/: fertilizer_basic.ron  water_clean.ron
native/data/ships/: bridge.ron  layout_medium.ron
native/data/skills/: skills.csv
native/data/solar_system/: bodies.json  mars.ron
native/src/: config.rs  debug.rs  embedded_data.rs  lib.rs  main.rs  persistence.rs  platform.rs  updater.rs
native/src/assets/: mod.rs
native/src/audio/: mod.rs  sounds.rs
native/src/ecs/: components.rs  systems.rs
native/src/gui/: mod.rs  theme.rs
native/src/mods/: mod.rs
native/src/net/: client.rs  identity.rs  mod.rs  ws_client.rs
native/src/physics/: mod.rs
native/src/renderer/: camera.rs  hologram.rs  mod.rs  pipeline.rs  shader_loader.rs  stars.rs
native/src/ship/: fibonacci.rs  mod.rs  rooms.rs
native/src/systems/: atmosphere.rs  disasters.rs  interaction.rs  mod.rs  time.rs  weather.rs
native/src/terrain/: asteroid.rs  heightmap.rs  planet.rs
native/web/: index.html
(+2270 files in other folders)
