[workspace]
resolver = "3"
members = [
    "server",
    "native",
    "native/crates/humanity-core",
    "native/crates/core-lifeform-model",
    "native/crates/module-water-systems",
    "native/crates/module-soil-ecology",
    "native/crates/module-crop-systems",
    "native/crates/module-carpentry",
    "native/crates/module-electrical-basics",
    "native/crates/module-plumbing-basics",
    "native/crates/module-health-first-aid",
    "native/crates/core-session-orchestrator",
    "native/crates/core-offline-loop",
    "native/crates/humanity-cli-game",
    "native/crates/core-skill-progression",
    "native/crates/core-teaching-graph",
    "native/crates/core-firstperson-controller",
    "native/crates/persistence-sqlite",
    "native/crates/engine-wgpu-shell",
    "native/crates/core-snapshot-sync",
    "native/crates/core-planet-icosphere",
]
exclude = [
    "app",
]
