[package]
name = "humanity-engine"
version = "0.124.0"
edition = "2021"

[[bin]]
name = "HumanityOS"
path = "src/main.rs"

[features]
default = ["native"]
native = ["winit", "relay", "dep:notify", "dep:pollster", "dep:env_logger", "dep:tokio", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:tungstenite", "dep:kira", "dep:ureq", "dep:bip39", "dep:ed25519-dalek", "dep:hex", "dep:aes-gcm", "dep:pbkdf2", "dep:argon2", "dep:sha2", "dep:base64", "dep:bs58", "dep:p256", "dep:rand_core_06", "dep:ml-dsa", "dep:ml-kem"]
relay = ["dep:axum", "dep:tower-http", "dep:rusqlite", "dep:tracing", "dep:tracing-subscriber", "dep:reqwest", "dep:tokio", "dep:ed25519-dalek", "dep:hex", "dep:sha2", "dep:hmac", "dep:web-push-native", "dep:base64", "dep:base64ct", "dep:bs58", "dep:tokio-stream", "dep:futures", "dep:regex", "dep:url", "dep:uuid", "dep:tokio-tungstenite", "dep:ciborium", "dep:blake3", "dep:rand_core_06", "dep:ml-dsa", "dep:ml-kem", "dep:argon2"]
mesh = ["relay", "dep:serialport"]
wasm = [
    "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook", "dep:console_log",
    "getrandom/js",
]

[dependencies]
# Rendering
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
# ECS
hecs = "0.10"
# Physics
rapier3d = "0.22"
# Math
glam = { version = "0.29", features = ["serde"] }
# Audio
kira = { version = "0.9", optional = true }
# Asset loading
gltf = "1.4"
image = "0.25"
# Serialization
serde = { version = "1", features = ["derive"] }
ron = "0.8"
toml = "0.8"
csv = "1.3"
serde_json = "1"
# Logging
log = "0.4"
# Procedural generation
noise = "0.9"
rand = "0.9"
thiserror = "2"
# getrandom needs "js" feature on wasm32 (activated by `wasm` feature flag above)
getrandom = "0.2"

# === Platform: Native ===
winit = { version = "0.30", optional = true }
notify = { version = "7", optional = true }
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }
tungstenite = { version = "0.24", optional = true, features = ["native-tls"] }
ureq = { version = "2", optional = true }
bip39 = { version = "2", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }
hex = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true, features = ["simple"] }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
bs58 = { version = "0.5", optional = true }
p256 = { version = "0.13", optional = true, features = ["ecdh", "pkcs8"] }

# === Platform: WASM ===
web-sys = { version = "0.3", optional = true, features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "KeyboardEvent", "MouseEvent", "WheelEvent", "PointerEvent",
    "Performance", "console",
    "Request", "RequestInit", "RequestMode", "Response",
    "Headers",
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2", optional = true }

# === Platform: Relay (server mode) ===
axum = { version = "0.8", optional = true, features = ["ws", "multipart"] }
tower-http = { version = "0.6", optional = true, features = ["cors", "fs"] }
rusqlite = { version = "0.34", optional = true, features = ["bundled"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
hmac = { version = "0.12", optional = true }
web-push-native = { version = "0.4", optional = true }
base64ct = { version = "1", optional = true, features = ["alloc"] }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
regex = { version = "1", optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots"] }
ciborium = { version = "0.2", optional = true }
blake3 = { version = "1", optional = true }
rand_core_06 = { package = "rand_core", version = "0.6", optional = true, features = ["getrandom"] }

# === Post-quantum cryptography (Phase 0 baseline; see plan decision 4) ===
# ML-DSA-65 (Dilithium3) for object signing, ML-KEM-768 (Kyber768) for KEM,
# Argon2id for password-based KDF. Pure Rust, WASM-compatible.
# `ml-kem/getrandom` exposes the no-arg `encapsulate()` helper that uses the OS RNG.
ml-dsa = { version = "0.1.0-rc.8", optional = true }
ml-kem = { version = "0.3.0-rc.2", optional = true, features = ["getrandom"] }
argon2 = { version = "0.6.0-rc.8", optional = true }

# === LoRa mesh transport (Phase 7b — feature `mesh`) ===
# Cross-platform pure-Rust serial port access. The LoRa radio modules we
# target (RFM95W, SX1262, etc.) expose a UART, so this is the canonical path.
serialport = { version = "4.9", optional = true }

[build-dependencies]
winres = "0.1"
