[package]
name = "humanity-engine"
version = "0.889.1"
edition = "2021"

[[bin]]
name = "HumanityOS"
path = "src/main.rs"
# main.rs is a thin entry point with no unit tests; all tests live in the lib
# (#[cfg(test)] modules) and tests/ integration files. Skipping the bin's test
# harness keeps `cargo test` from linking the full native bin — that link emits
# a huge debug PDB that trips MSVC's type-server limit (LNK1318 LIMIT(12)) on
# Windows. `cargo build`/release are unaffected. (v0.411, 2026-06-08.)
test = false

[features]
default = ["native"]
native = ["winit", "relay", "dep:notify", "dep:pollster", "dep:env_logger", "dep:tokio", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:tungstenite", "dep:kira", "dep:ureq", "dep:bip39", "dep:qrcode", "dep:ed25519-dalek", "dep:hex", "dep:aes-gcm", "dep:pbkdf2", "dep:argon2", "dep:sha2", "dep:base64", "dep:bs58", "dep:p256", "dep:rand_core_06", "dep:ml-dsa", "dep:ml-kem", "dep:arboard", "dep:keyring", "dep:str0m", "dep:hmac", "dep:sha1", "dep:md-5", "dep:memory-stats", "dep:cpal", "dep:rtrb", "dep:unsafe-libopus", "dep:nnnoiseless"]
relay = ["dep:axum", "dep:tower-http", "dep:rusqlite", "dep:r2d2", "dep:r2d2_sqlite", "dep:tracing", "dep:tracing-subscriber", "dep:reqwest", "dep:tokio", "dep:ed25519-dalek", "dep:hex", "dep:sha2", "dep:sha1", "dep:hmac", "dep:web-push-native", "dep:base64", "dep:base64ct", "dep:bs58", "dep:tokio-stream", "dep:futures", "dep:regex", "dep:url", "dep:uuid", "dep:tokio-tungstenite", "dep:ciborium", "dep:blake3", "dep:rand_core_06", "dep:ml-dsa", "dep:ml-kem", "dep:argon2"]
mesh = ["relay", "dep:serialport"]
wasm = [
    "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook", "dep:console_log",
    "getrandom/js",
]

[dependencies]
# Rendering
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
# ECS
hecs = "0.10"
# Physics
rapier3d = "0.22"
# Math
glam = { version = "0.29", features = ["serde"] }
# Audio
kira = { version = "0.9", optional = true }
# Asset loading
gltf = "1.4"
image = "0.25"
# Serialization
serde = { version = "1", features = ["derive"] }
ron = "0.8"
toml = "0.8"
csv = "1.3"
serde_json = "1"
# Logging
log = "0.4"
# Procedural generation
noise = "0.9"
rand = "0.9"
thiserror = "2"
# getrandom needs "js" feature on wasm32 (activated by `wasm` feature flag above)
getrandom = "0.2"

# === Platform: Native ===
winit = { version = "0.30", optional = true }
notify = { version = "7", optional = true }
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "signal"], optional = true }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }
tungstenite = { version = "0.24", optional = true, features = ["native-tls"] }
ureq = { version = "2", optional = true }
# Process RSS for the F4 System diagnostics overlay (v0.482). Tiny, cross-platform
# (GetProcessMemoryInfo on Windows, /proc on Linux); native-only.
memory-stats = { version = "1", optional = true }
# Cross-platform clipboard access for image paste (Ctrl+V from print-screen
# captures) — v0.232. Already a transitive dep via egui; declaring directly
# so we can call get_image() on the clipboard. native feature only.
arboard = { version = "3", optional = true, default-features = false, features = ["image-data"] }
# Cross-platform OS keychain wrapper (Windows Credential Manager via DPAPI,
# macOS Keychain Services, Linux Secret Service / KWallet). Used by the
# v0.278.0 auto-unlock feature so users can opt into silent startup without
# typing their full BIP39-derived passphrase every launch. native feature
# only — relay/wasm builds don't carry an interactive identity.
keyring = { version = "3", optional = true, default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
bip39 = { version = "2", optional = true }
# QR generation for the native "Link a device" identity display (v0.837): encodes
# the same 64-char-key backup JSON the web importer accepts, so a phone camera can
# scan a native identity. Matrix-only (no image/svg renderers) to stay lean;
# native feature only. We paint the modules into an egui texture ourselves.
qrcode = { version = "0.14", optional = true, default-features = false }
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }
hex = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true, features = ["simple"] }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
bs58 = { version = "0.5", optional = true }
p256 = { version = "0.13", optional = true, features = ["ecdh", "pkcs8"] }
# === Native WebRTC DataChannel P2P (sans-IO; no tokio reactor needed) ===
# str0m is a sans-IO WebRTC implementation: it never touches the network or a
# clock itself. We drive it from a single std::thread that owns a blocking
# UdpSocket and feeds it Input::Receive (datagrams) / Input::Timeout (the clock)
# and pumps its Output::Transmit (datagrams to send) / Output::Event (channel
# open/data) / Output::Timeout (when to wake next). This mirrors the blocking
# tungstenite WsClient model — NO async runtime is involved on the native path.
# native feature only (relay/wasm never open peer DataChannels).
#
# CRYPTO BACKEND: we disable str0m's default features and select `rust-crypto`
# (the pure-Rust DTLS/SRTP provider). The default backend is `aws-lc-rs`, which
# compiles the `aws-lc-sys` C library and therefore needs cmake + a C toolchain
# + NASM at build time — a heavy, fragile native dependency that would break the
# Windows desktop build and CI. `rust-crypto` keeps us 100% pure-Rust, matching
# the rest of this project's crypto stack (aes-gcm, p256, ml-dsa, ml-kem). We
# also drop the `examples` default feature (it pulls in rouille/rustls for the
# bundled demo server, which we don't use).
str0m = { version = "0.20", optional = true, default-features = false, features = ["rust-crypto"] }
# === TURN relay client crypto (RFC 5766 long-term credential auth) ===
# The native WebRTC TURN client (src/net/webrtc.rs, inc-3b) authenticates to the
# operator's TURN server with the long-term-credential mechanism: a per-message
# MESSAGE-INTEGRITY = HMAC-SHA1 over the STUN message, keyed by MD5(user:realm:pass).
# These are small pure-Rust RustCrypto crates on the same `digest 0.10` family as
# the rest of our stack (sha2, hmac) — no new digest version is pulled into the
# graph. `hmac` is already declared above (a relay dep); we just add it to the
# `native` feature list. native feature only — relay/wasm never run a TURN client.
sha1 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
# === Native voice audio (v0.485) ===
# Real-time mic capture + speaker playback (cpal, WASAPI on Windows, pure Rust)
# and Opus codec for WebRTC voice. We use `unsafe-libopus` (libopus transpiled to
# Rust by c2rust) rather than the `opus`/`audiopus`/`magnum-opus` crates because
# those wrap libopus via a *-sys C build (cmake + a C toolchain), exactly the
# aws-lc-sys fragility we engineered str0m around with `rust-crypto`. This keeps
# the voice path 100% pure-Rust + browser-interoperable. `rtrb` is a wait-free
# SPSC ring buffer for the realtime audio-callback boundary (no Mutex on the
# audio thread). native feature only; the relay never captures audio.
cpal = { version = "0.17", optional = true }
rtrb = { version = "0.3", optional = true }
unsafe-libopus = { version = "0.2", optional = true }
# Pure-Rust RNNoise port for the "Noise suppression" voice filter mode (removes
# keyboard clicks, coughs, fans, and steady background noise even DURING speech;
# a gate only helps between words). Verified pure Rust: its one real dep is
# `rustfft` (pure Rust, no build.rs C compile, no *-sys), consistent with the
# project's no-C-toolchain rule (same posture as unsafe-libopus + str0m
# rust-crypto). 48 kHz, 480-sample frames, expects i16-range f32 (the voice
# path scales for it). native feature only — the relay never processes audio.
nnnoiseless = { version = "0.5", optional = true, default-features = false }

# === Platform: WASM ===
web-sys = { version = "0.3", optional = true, features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "KeyboardEvent", "MouseEvent", "WheelEvent", "PointerEvent",
    "Performance", "console",
    "Request", "RequestInit", "RequestMode", "Response",
    "Headers",
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2", optional = true }

# === Platform: Relay (server mode) ===
axum = { version = "0.8", optional = true, features = ["ws", "multipart"] }
tower-http = { version = "0.6", optional = true, features = ["cors", "fs"] }
rusqlite = { version = "0.34", optional = true, features = ["bundled"] }
# Connection pool for the relay's SQLite store (R3 concurrency work). r2d2 is a
# generic pool; r2d2_sqlite adapts rusqlite into it. Gives the relay a pool of
# concurrent READ connections (WAL allows many readers) alongside the single
# dedicated writer.
#
# VERSION PIN — IMPORTANT: r2d2_sqlite's version number does NOT track
# rusqlite's. We use rusqlite 0.34 (→ libsqlite3-sys 0.32, the `links =
# "sqlite3"` native lib). Only ONE crate in the graph may link `sqlite3`, so
# r2d2_sqlite MUST depend on the SAME rusqlite 0.34 / libsqlite3-sys 0.32 —
# otherwise the build fails with a native-library conflict. r2d2_sqlite 0.27.0
# is the version whose dependency is `rusqlite = "^0.34"`; newer r2d2_sqlite
# (0.33/0.34) pull rusqlite 0.39 / libsqlite3-sys 0.37 and WILL NOT BUILD here.
# When you bump rusqlite, re-check the matching r2d2_sqlite (its rusqlite req
# must satisfy the new rusqlite minor). `bundled` forwards to rusqlite/bundled
# so both share the one bundled SQLite build.
r2d2 = { version = "0.8", optional = true }
r2d2_sqlite = { version = "=0.27.0", optional = true, features = ["bundled"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
hmac = { version = "0.12", optional = true }
web-push-native = { version = "0.4", optional = true }
base64ct = { version = "1", optional = true, features = ["alloc"] }
tokio-stream = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
regex = { version = "1", optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", optional = true, features = ["v4"] }
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots"] }
ciborium = { version = "0.2", optional = true }
blake3 = { version = "1", optional = true }
rand_core_06 = { package = "rand_core", version = "0.6", optional = true, features = ["getrandom"] }

# === Post-quantum cryptography (Phase 0 baseline; see plan decision 4) ===
# ML-DSA-65 (Dilithium3) for object signing, ML-KEM-768 (Kyber768) for KEM,
# Argon2id for password-based KDF. Pure Rust, WASM-compatible.
# `ml-kem/getrandom` exposes the no-arg `encapsulate()` helper that uses the OS RNG.
ml-dsa = { version = "0.1.0-rc.8", optional = true }
ml-kem = { version = "0.3.0-rc.2", optional = true, features = ["getrandom"] }
argon2 = { version = "0.6.0-rc.8", optional = true }

# === LoRa mesh transport (Phase 7b — feature `mesh`) ===
# Cross-platform pure-Rust serial port access. The LoRa radio modules we
# target (RFM95W, SX1262, etc.) expose a UART, so this is the canonical path.
serialport = { version = "4.9", optional = true }

[build-dependencies]
winres = "0.1"

# NOTE: a UI-snapshot harness (render egui pages to PNGs for review/regression,
# v0.495) lives in src/gui/ui_snapshots.rs. It uses the app's OWN egui + egui-wgpu
# + wgpu offscreen, so it needs NO extra dependency. (egui_kittest was tried first
# but its accesskit requirement does not compile against egui-winit 0.31.1.)


[dev-dependencies]
# GeoTIFF reading for the terrain data build tools (examples/ only, never in
# the shipped binary): decodes the NOAA ETOPO 2022 float32 elevation tiles.
tiff = "0.9"
