[package]
name = "humanity-desktop"
version = "0.26.0"
description = "HumanityOS desktop app (HOS) — native wrapper for united-humanity.us"
edition = "2021"
license = "CC0-1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
open = "5"
tokio = { version = "1", features = ["time", "sync"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
url = "2.5.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
