[package]
name = "humanity-engine"
version = "0.84.0"
edition = "2021"

[[bin]]
name = "humanity-engine"
path = "src/main.rs"

[features]
default = ["native"]
native = ["winit", "dep:notify", "dep:pollster", "dep:env_logger", "dep:tokio", "dep:egui", "dep:egui-wgpu", "dep:egui-winit", "dep:tungstenite", "dep:kira", "dep:ureq", "dep:bip39", "dep:ed25519-dalek", "dep:hex", "dep:aes-gcm", "dep:pbkdf2", "dep:sha2", "dep:base64", "dep:bs58"]
wasm = [
    "dep:web-sys", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures",
    "dep:console_error_panic_hook", "dep:console_log",
    "getrandom/js",
]

[dependencies]
# Rendering
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
# ECS
hecs = "0.10"
# Physics
rapier3d = "0.22"
# Math
glam = { version = "0.29", features = ["serde"] }
# Audio
kira = { version = "0.9", optional = true }
# Asset loading
gltf = "1.4"
image = "0.25"
# Serialization
serde = { version = "1", features = ["derive"] }
ron = "0.8"
toml = "0.8"
csv = "1.3"
serde_json = "1"
# Logging
log = "0.4"
# Procedural generation
noise = "0.9"
rand = "0.8"
# getrandom needs "js" feature on wasm32 (activated by `wasm` feature flag above)
getrandom = "0.2"

# === Platform: Native ===
winit = { version = "0.30", optional = true }
notify = { version = "7", optional = true }
pollster = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"], optional = true }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }
tungstenite = { version = "0.24", optional = true, features = ["native-tls"] }
ureq = { version = "2", optional = true }
bip39 = { version = "2", optional = true }
ed25519-dalek = { version = "2", optional = true, features = ["rand_core"] }
hex = { version = "0.4", optional = true }
aes-gcm = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true, features = ["simple"] }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
bs58 = { version = "0.5", optional = true }

# === Platform: WASM ===
web-sys = { version = "0.3", optional = true, features = [
    "Document", "Window", "Element", "HtmlCanvasElement",
    "KeyboardEvent", "MouseEvent", "WheelEvent", "PointerEvent",
    "Performance", "console",
    "Request", "RequestInit", "RequestMode", "Response",
    "Headers",
] }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "0.2", optional = true }

[build-dependencies]
winres = "0.1"
