[package]
name = "core-offline-loop"
version = "0.1.0"
edition = "2024"
description = "Deterministic offline world-loop scaffold for Humanity"
license = "CC0-1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
core-lifeform-model = { path = "../core-lifeform-model" }
core-session-orchestrator = { path = "../core-session-orchestrator" }
module-water-systems = { path = "../module-water-systems" }
module-soil-ecology = { path = "../module-soil-ecology" }
module-crop-systems = { path = "../module-crop-systems" }
