[package]
name = "core-skill-progression"
version = "0.1.0"
edition = "2024"
description = "Deterministic XP and mastery progression primitives"
license = "CC0-1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
core-session-orchestrator = { path = "../core-session-orchestrator" }
