[package]
name = "core-snapshot-sync"
version = "0.1.0"
edition = "2024"
description = "Snapshot+delta reconciliation and desync recovery primitives"
license = "CC0-1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
blake3 = "1"
serde_json = "1"
core-offline-loop = { path = "../core-offline-loop" }
