[package]
name = "core-teaching-graph"
version = "0.1.0"
edition = "2024"
description = "Competency DAG and recommendation primitives"
license = "CC0-1.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
core-skill-progression = { path = "../core-skill-progression" }

[dev-dependencies]
core-session-orchestrator = { path = "../core-session-orchestrator" }
