[package]
name = "engine-wgpu-shell"
version = "0.1.0"
edition = "2024"
description = "Custom Rust + wgpu runtime shell scaffold with input/render loop"
license = "CC0-1.0"

[dependencies]
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
core-offline-loop = { path = "../core-offline-loop" }
core-firstperson-controller = { path = "../core-firstperson-controller" }
