[package]
name = "humanity-relay"
version = "0.1.0"
edition = "2024"
description = "WebSocket relay server for the Humanity Network"
license = "CC0-1.0"

[dependencies]
humanity-core = { path = "../humanity-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework + WebSocket
axum = { version = "0.8", features = ["ws"] }

# Tower middleware (CORS, etc.)
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (persistence)
rusqlite = { version = "0.34", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for webhook notifications, using rustls to avoid openssl dep)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
tokio-stream = "0.1"
futures = "0.3"
