[package]
name = "humanity-desktop"
version = "0.4.8"
description = "HumanityOS desktop app (HOS) — native wrapper for united-humanity.us"
edition = "2021"
license = "CC0-1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
