[package]
name = "persistence-sqlite"
version = "0.1.0"
edition = "2024"
description = "SQLite persistence backend for Humanity world snapshots and events"
license = "CC0-1.0"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
serde_json = "1"
thiserror = "2"
core-offline-loop = { path = "../core-offline-loop" }

[dev-dependencies]
tempfile = "3"
